k8s/infrastructure/pihole/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  template:
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole-data
