k8s/infrastructure/pihole/dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-external
  namespace: pihole
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/part-of: pihole
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.1.50
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
  selector:
    app: pihole
    release: pihole
