k8s/infrastructure/pihole/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.cglavin50.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
  tls:
    store:
      name: default
      namespace: kube-system
